# ramses

examples-genivi-workshop/: CMakeLists.txt
examples-genivi-workshop/1_helloWorld/: CMakeLists.txt
examples-genivi-workshop/1_helloWorld/src/: main.cpp
examples-genivi-workshop/2_cube/: CMakeLists.txt
examples-genivi-workshop/2_cube/src/: main.cpp
examples-genivi-workshop/3_localAnimation/: CMakeLists.txt
examples-genivi-workshop/3_localAnimation/res/: ramses-example-workshop-texturing.frag  ramses-example-workshop-texturing.vert
examples-genivi-workshop/3_localAnimation/src/: main.cpp
examples-genivi-workshop/4_remoteAnimation/: CMakeLists.txt
examples-genivi-workshop/4_remoteAnimation/src/: main.cpp
examples-genivi-workshop/5_text/: CMakeLists.txt
examples-genivi-workshop/5_text/src/: main.cpp
examples-genivi-workshop/6_renderer/: CMakeLists.txt
examples-genivi-workshop/6_renderer/src/: main.cpp
examples-genivi-workshop/7_embeddedCompositing/: CMakeLists.txt
examples-genivi-workshop/7_embeddedCompositing/src/: main.cpp
examples-genivi-workshop/8_dataLinking/8_dataLinkingConsumer/: CMakeLists.txt
examples-genivi-workshop/8_dataLinking/8_dataLinkingConsumer/res/: ramses-example-workshop-color.frag
examples-genivi-workshop/8_dataLinking/8_dataLinkingConsumer/src/: main.cpp
examples-genivi-workshop/8_dataLinking/8_dataLinkingProvider/: CMakeLists.txt
examples-genivi-workshop/8_dataLinking/8_dataLinkingProvider/res/: ramses-example-workshop-color.vert
examples-genivi-workshop/8_dataLinking/8_dataLinkingProvider/src/: main.cpp
examples-genivi-workshop/9_contentPersistation/: CMakeLists.txt
examples-genivi-workshop/9_contentPersistation/res/: export_exampleScene.ramscene  export_exampleScene_resources.ramres
examples-genivi-workshop/9_contentPersistation/src/: main.cpp
